tests/snapshots/run_wpt_conformance__onnx_dequantizeLinear_int4_1D_tensor_of_even_size_with_float32_1D_scale.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "dequantizeLinear.https.any.js",
    "dequantizeLinear int4 1D tensor of even size with float32 1D scale",
    "onnx",
    "PASS",
)
