tests/snapshots/run_wpt_conformance__onnx_dequantizeLinear_int8_4D_tensor_broadcasting_float16_4D_scale_and_int8_4D_zeroPoint.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "dequantizeLinear.https.any.js",
    "dequantizeLinear int8 4D tensor broadcasting float16 4D scale and int8 4D zeroPoint",
    "onnx",
    "PASS",
)
